--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,54 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+  margin: 0;
+  font-family:Arial, Helvetica, sans-serif;
+}
 
-body{
-    background: white;
+.card {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 300px;
+  height: 400px;
+  font-size: 70px;
+  position: relative;
+}
+
+.top,
+.bottom {
+  position: absolute;
+  font-size: 90px;
+}
+
+.top {
+  top: 10px;
+  left: 10px;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 150px;
+}
+
+.bottom {
+  bottom: 10px;
+  right: 10px;
+  transform: rotate(180deg);
+}
+
+.heart,
+.diamond {
+  color: red;
+}
+
+.spade,
+.club {
+  color: black;
 }
