--- a/src/style.css
+++ b/src/style.css
@@ -52,3 +52,19 @@ body {
 .club {
   color: black;
 }
+
+@media (max-width: 500px) {
+  .card {
+    width: 200px;
+    height: 280px;
+    font-size: 50px;
+  }
+
+  .top, .bottom {
+    font-size: 25px;
+  }
+
+  .center {
+    font-size: 40px;
+  }
+}
